--- a/.tmux.conf
+++ b/.tmux.conf
@@ -73,6 +73,7 @@ bind r source-file ~/.tmux.conf \; display "Reload!"
 set -g renumber-windows on
 set -g base-index 1
 setw -g pane-base-index 1
+setw -g aggressive-resize on
 
 #Allows for faster key repetition
 set -g escape-time 10
@@ -118,7 +119,7 @@ bind-key -T edit-mode-vi Down send-keys -X history-down
 bind-key ] run "tmux set-buffer \"$(xclip -sel clip -o)\"; tmux paste-buffer"
 
 # loud or quiet?
-set -g focus-events off
+set -g focus-events on
 set -g visual-activity off
 set -g visual-bell off
 set -g visual-silence off
@@ -152,7 +153,7 @@ set -g status-fg colour136 #yellow
 set -g status-attr default
 set -g status-position top
 set -g status-attr dim
-#set -g status-keys vi
+set -g status-keys vi
 #set -g status-interval 1
 set -g status-justify centre # center align window list
 #set -g status-left-length 20
